<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/board_selection">

        <ListPreference
            app:entries="@array/board_id_entries"
            app:entryValues="@array/board_id_values"
            app:key="@string/board_id_key"
            app:title="@string/board_id_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="-1"/>

        <EditTextPreference
            app:key="@string/ip_address_key"
            app:summary="@string/ip_address_summary"
            app:title="@string/ip_address_title"
            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            app:key="@string/ip_port_key"
            app:summary="@string/ip_port_summary"
            app:title="@string/ip_port_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_params">

        <ListPreference
            app:entries="@array/data_type_entries"
            app:entryValues="@array/data_type_values"
            app:key="@string/data_type_key"
            app:title="@string/data_type_title"
            app:defaultValue="EEG"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            app:key="@string/plot_timeseries_key"
            app:defaultValue="true"
            app:title="@string/plot_timeseries_title"
            app:summaryOn="@string/plot_timeseries_on"
            app:summaryOff="@string/plot_timeseries_off"/>

        <SwitchPreferenceCompat
            app:key="@string/plot_psd_key"
            app:defaultValue="true"
            app:title="@string/plot_psd_title"
            app:summaryOn="@string/plot_psd_on"
            app:summaryOff="@string/plot_psd_off"/>

        <SwitchPreferenceCompat
            app:key="@string/plot_bandpower_key"
            app:defaultValue="false"
            app:title="@string/plot_bandpower_title"
            app:summaryOn="@string/plot_bandpower_on"
            app:summaryOff="@string/plot_bandpower_off"/>

    </PreferenceCategory>

</PreferenceScreen>